# TinyPE

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  genstub.cmd  launch.vs.json  main.cpp  tiny.sln  tiny.vcxproj  tiny.vcxproj.filters  winmain.cpp
CMake/: SetupMSVC.cmake
src/: CMakeLists.txt  empty.cpp  main.cpp  winmain.cpp
